0.04
 - Add Map::Tube::Berlin and Map::Tube::Moscow to SEE ALSO section in doc.

0.03 2014-12-03T07:59:33+01:00
 - Add Map::Tube::NYC and Map::Tube::Sofia to SEE ALSO section in doc.
 - Add Map::Tube::Warsaw to SEE ALSO section in doc.
 - Fix Florenc station in XML map.
 - Update LICENSE AND COPYRIGHT section in doc.

0.02 2014-11-30T23:14:14+01:00
 - Add get_node_by_id() and get_node_by_name() new methods from 2.27
   Map::Tube to doc.
 - Fix EXAMPLE1 section in doc with new 2.27 API.
 - Fix stations XML map.
 - Update to new 2.27 API.

0.01 2014-11-24T07:41:28+01:00
 - First version