@@ -37,6 +37,7 @@ Map::Tube::Prague - Interface to the Prague Tube Map.
 
  use Map::Tube::Prague;
  my $obj = Map::Tube::Prague->new;
+ my $routes_ar = $obj->get_all_routes($from, $to);
  my $station = $obj->get_node_by_id($station_id);
  my $station = $obj->get_node_by_name($station_name);
  my $route = $obj->get_shortest_route($from, $to);
@@ -56,6 +57,11 @@ For more information about Prague Map, click L<here|https://en.wikipedia.org/wik
 =item C<new()>
 
  Constructor.
+
+=item C<get_all_routes($from, $to)>
+
+ Get all routes from station to station.
+ Returns reference to array with Map::Tube::Route objects.
 
 =item C<get_node_by_id($station_id)>
 
