@@ -4,6 +4,7 @@ NAME
 SYNOPSIS
      use Map::Tube::Prague;
      my $obj = Map::Tube::Prague->new;
+     my $routes_ar = $obj->get_all_routes($from, $to);
      my $station = $obj->get_node_by_id($station_id);
      my $station = $obj->get_node_by_name($station_name);
      my $route = $obj->get_shortest_route($from, $to);
@@ -19,6 +20,10 @@ DESCRIPTION
 METHODS
     "new()"
              Constructor.
+
+    "get_all_routes($from, $to)"
+             Get all routes from station to station.
+             Returns reference to array with Map::Tube::Route objects.
 
     "get_node_by_id($station_id)"
              Get station node by id.
